diesel_compile_tests/tests/compile-fail/cannot_mix_aggregate_and_non_aggregate_selects.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::dsl::count;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    use self::users::dsl::*;

    let source = users.select((id, count(users.star())));
    //~^ ERROR E0277
}
